--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -107,6 +107,8 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = "@{safeUnbox(viewmodelauth.isBtnGoogleNotClickable()) ? false : true}"
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("google") ? "AuthGoogleUserLogged" : "AuthGoogleUser")}'
 			/>
 
 		<ImageButton
