--- a/app/src/main/res/layout/c_card_vacancy_company_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_company_close.xml
@@ -8,7 +8,7 @@
 
 		<variable
 			name = "vacancy"
-			type = "ru.jobni.jobni.model.VacancyEntity"
+			type = "ru.jobni.jobni.model.CompanyVacancyEntity"
 			/>
 
 		<variable
@@ -53,7 +53,7 @@
 					android:layout_width = "match_parent"
 					android:layout_height = "0dp"
 					app:layout_constraintTop_toTopOf = "parent"
-					app:layout_constraintBottom_toBottomOf = "@+id/btn_expand"
+					app:layout_constraintBottom_toBottomOf = "parent"
 					app:layout_constraintStart_toStartOf = "parent"
 					app:layout_constraintEnd_toEndOf = "parent"
 					android:background = "@drawable/shape_card"
@@ -77,279 +77,8 @@
 					android:maxLength = "60"
 					tools:text = "@string/card_vacancy_close_vacancy_name"
 					/>
-
-				<ImageView
-					android:id = "@+id/eye"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/online"
-					app:layout_constraintBottom_toBottomOf = "@+id/online"
-					app:layout_constraintStart_toEndOf = "@+id/online"
-					android:layout_marginStart = "8dp"
-					app:srcCompat = "@drawable/ic_eye"
-					android:onClick = "@{() -> viewmodel.onEyeRVVacancyClick(position)}"
-					/>
-
-				<TextView
-					android:id = "@+id/newbie"
-					android:layout_width = "60dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "parent"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "16dp"
-					android:layout_marginEnd = "30dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:textAlignment = "textEnd"
-					app:formattedTextSalary = "@{vacancy.salaryLevelNewbie}"
-					/>
-
-				<TextView
-					android:id = "@+id/newbie_text"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/newbie"
-					app:layout_constraintEnd_toStartOf = "@+id/newbie"
-					android:layout_marginEnd = "2dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@string/text_newbie"
-					/>
-
-				<TextView
-					android:id = "@+id/newbie_money"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "14dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "16sp"
-					android:text = "@string/text_ruble"
-					android:gravity = "center"
-					android:textAlignment = "center"
-					/>
-
-				<TextView
-					android:id = "@+id/experienced"
-					android:layout_width = "60dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/newbie"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "8dp"
-					android:layout_marginEnd = "30dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:textAlignment = "textEnd"
-					app:formattedTextSalary = "@{vacancy.salaryLevelExperienced}"
-					/>
-
-				<TextView
-					android:id = "@+id/experienced_text"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/experienced"
-					app:layout_constraintEnd_toStartOf = "@+id/experienced"
-					android:layout_marginEnd = "2dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@string/text_experienced"
-					/>
-
-				<TextView
-					android:id = "@+id/experienced_money"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/newbie_money"
-					app:layout_constraintEnd_toEndOf = "@+id/newbie_money"
-					android:layout_marginTop = "6dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "16sp"
-					android:text = "@string/text_ruble"
-					android:gravity = "center"
-					android:textAlignment = "center"
-					/>
-
-				<TextView
-					android:id = "@+id/required_competencies_headline"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/name"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toStartOf = "@+id/experienced"
-					android:layout_marginTop = "16dp"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@string/card_vacancy_close_required_competencies_headline"
-					/>
-
-				<TextView
-					android:id = "@+id/required_competencies_text"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/required_competencies_headline"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "normal"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@{vacancy.competenceList}"
-					tools:text = "@string/card_vacancy_close_required_competencies_text"
-					/>
-
-				<TextView
-					android:id = "@+id/work_format_headline"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/required_competencies_text"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "16dp"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@string/card_vacancy_close_work_format_headline"
-					/>
-
-				<TextView
-					android:id = "@+id/work_format_text"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/work_format_headline"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "normal"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@{vacancy.formatOfWork}"
-					tools:text = "@string/card_vacancy_close_work_format_text"
-					/>
-
-				<TextView
-					android:id = "@+id/employment_headline"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/work_format_text"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "16dp"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@string/card_vacancy_close_employment_headline"
-					/>
-
-				<TextView
-					android:id = "@+id/employment_format_text"
-					android:layout_width = "0dp"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/employment_headline"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "normal"
-					android:textColor = "@color/font_color"
-					android:textSize = "14sp"
-					android:text = "@{vacancy.employmentList}"
-					tools:text = "@string/card_vacancy_close_employment_text"
-					/>
-
-				<View
-					android:id = "@+id/divider"
-					android:layout_width = "0dp"
-					android:layout_height = "1dp"
-					app:layout_constraintTop_toBottomOf = "@+id/employment_format_text"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "16dp"
-					android:background = "@color/theme_1_hover"
-					/>
-
-				<TextView
-					android:id = "@+id/company_name"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toBottomOf = "@+id/divider"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					android:layout_marginTop = "16dp"
-					android:layout_marginStart = "16dp"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/font_color"
-					android:textSize = "16sp"
-					android:text = "@{vacancy.companyName}"
-					tools:text = "@string/company"
-					/>
-
-				<ImageView
-					android:id = "@+id/online"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/company_name"
-					app:layout_constraintBottom_toBottomOf = "@+id/company_name"
-					app:layout_constraintStart_toEndOf = "@+id/company_name"
-					android:layout_marginStart = "8dp"
-					app:srcCompat = "@drawable/ic_online"
-					/>
-
-				<TextView
-					android:id = "@+id/distance"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/company_name"
-					app:layout_constraintBottom_toBottomOf = "@+id/company_name"
-					app:layout_constraintEnd_toStartOf = "@+id/map_pin"
-					android:layout_marginEnd = "16dp"
-					android:textStyle = "bold"
-					android:textColor = "@color/online"
-					android:textSize = "16sp"
-					android:text = "@string/card_vacancy_close_distance"
-					app:layout_constraintVertical_bias = "0.0"
-					/>
-
-				<ImageView
-					android:id = "@+id/map_pin"
-					android:layout_width = "wrap_content"
-					android:layout_height = "wrap_content"
-					app:layout_constraintTop_toTopOf = "@+id/company_name"
-					app:layout_constraintBottom_toBottomOf = "@+id/company_name"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginEnd = "16dp"
-					app:srcCompat = "@drawable/ic_map_pin"
-					/>
-
-				<Button
-					android:id = "@+id/btn_expand"
-					android:layout_width = "0dp"
-					android:layout_height = "35dp"
-					app:layout_constraintTop_toBottomOf = "@id/divider"
-					app:layout_constraintStart_toStartOf = "@+id/background"
-					app:layout_constraintEnd_toEndOf = "@+id/background"
-					android:layout_marginTop = "50dp"
-					android:background = "@color/theme_1_color_1"
-					android:drawableTop = "@drawable/ic_expand_more_black_24dp"
-					android:onClick = "@{() -> viewmodel.onExpandVacancyCompanyClick(position)}"
-					/>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
+
