--- a/app/src/main/res/layout/c_card_vacancy_company_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_company_close.xml
@@ -51,7 +51,7 @@
 				<ImageView
 					android:id = "@+id/background"
 					android:layout_width = "match_parent"
-					android:layout_height = "0dp"
+					android:layout_height = "200dp"
 					app:layout_constraintTop_toTopOf = "parent"
 					app:layout_constraintBottom_toBottomOf = "parent"
 					app:layout_constraintStart_toStartOf = "parent"
@@ -62,7 +62,7 @@
 					/>
 
 				<TextView
-					android:id = "@+id/name"
+					android:id = "@+id/tv_company_vacancy_name"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toTopOf = "@id/background"
@@ -76,6 +76,79 @@
 					android:maxWidth = "230dp"
 					android:maxLength = "60"
 					tools:text = "@string/card_vacancy_close_vacancy_name"
+					/>
+
+				<Button
+					android:id = "@+id/btn_company_vacancy_show"
+					android:layout_width = "140dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/background"
+					app:layout_constraintBottom_toBottomOf = "@+id/background"
+					app:layout_constraintStart_toStartOf = "@+id/background"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
+					android:layout_marginBottom = "8dp"
+					android:layout_marginStart = "16dp"
+					android:textStyle = "bold"
+					android:background = "@drawable/shape_button"
+					android:textColor = "@color/font_color"
+					android:textSize = "12sp"
+					android:text = "@string/btn_company_vacancy_show_text"
+					app:layout_constraintHorizontal_bias = "0.0"
+					app:layout_constraintVertical_bias = "0.951"
+					/>
+
+				<Button
+					android:id = "@+id/btn_company_vacancy_edit"
+					android:layout_width = "140dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toTopOf = "@+id/background"
+					app:layout_constraintStart_toStartOf = "@+id/background"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
+					android:layout_marginTop = "8dp"
+					android:layout_marginStart = "8dp"
+					android:textStyle = "bold"
+					android:background = "@drawable/shape_button"
+					android:textColor = "@color/font_color"
+					android:textSize = "12sp"
+					android:text = "@string/btn_company_vacancy_edit_text"
+					app:layout_constraintHorizontal_bias = "0.96"
+					/>
+
+				<Button
+					android:id = "@+id/btn_company_vacancy_delete"
+					android:layout_width = "140dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/btn_company_vacancy_edit"
+					app:layout_constraintStart_toStartOf = "@+id/background"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
+					android:layout_marginTop = "16dp"
+					android:layout_marginStart = "8dp"
+					android:textStyle = "bold"
+					android:background = "@drawable/shape_button"
+					android:textColor = "@color/font_color"
+					android:textSize = "12sp"
+					android:text = "@string/btn_company_vacancy_delete_text"
+					app:layout_constraintHorizontal_bias = "0.96"
+					/>
+
+				<Button
+					android:id = "@+id/btn_company_vacancy_archive"
+					android:layout_width = "140dp"
+					android:layout_height = "wrap_content"
+					app:layout_constraintTop_toBottomOf = "@+id/btn_company_vacancy_delete"
+					app:layout_constraintBottom_toBottomOf = "@+id/background"
+					app:layout_constraintStart_toStartOf = "@+id/background"
+					app:layout_constraintEnd_toEndOf = "@+id/background"
+					android:layout_marginTop = "16dp"
+					android:layout_marginBottom = "8dp"
+					android:layout_marginStart = "8dp"
+					android:textStyle = "bold"
+					android:background = "@drawable/shape_button"
+					android:textColor = "@color/font_color"
+					android:textSize = "12sp"
+					android:text = "@string/btn_company_vacancy_archive_text"
+					app:layout_constraintHorizontal_bias = "0.959"
+					app:layout_constraintVertical_bias = "0.125"
 					/>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
