--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -60,6 +60,8 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = "@{safeUnbox(viewmodelauth.isBtnVKNotClickable()) ? false : true}"
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("vk") ? "AuthVKUserLogged" : "AuthVKUser")}'
 			/>
 
 		<ImageButton
