--- a/app/src/main/res/layout/c_authorization_user_vk.xml
+++ b/app/src/main/res/layout/c_authorization_user_vk.xml
@@ -61,5 +61,17 @@
 			app:viewmodelmain = "@{viewmodelmain}"
 			app:viewmodelauth = "@{viewmodelauth}"
 			/>
+
+		<Button
+			android:id = "@+id/btn_user_vk_login"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
+			app:layout_constraintStart_toStartOf = "@+id/iv_background"
+			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
+			android:layout_marginTop = "16dp"
+			android:background = "@drawable/shape_button"
+			android:text = "@string/enter"
+			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
