fix отображение отформатированного баланса компании

--- a/app/src/main/res/layout/fragment_company_finance.xml
+++ b/app/src/main/res/layout/fragment_company_finance.xml
@@ -79,6 +79,7 @@
 			android:textAlignment = "textEnd"
 			tools:text = "@string/tv_company_balance_amount_text"
 			app:layout_constraintHorizontal_bias = "0.1"
+			app:formattedTextSalary = "@{viewmodel.companyBalance}"
 			/>
 
 		<TextView
