рефакторинг авторизации по почте авторизация по телефону ч.1

--- a/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_mail.xml
@@ -72,7 +72,7 @@
 					android:layout_marginTop = "26dp"
 					android:background = "@drawable/shape_button"
 					android:text = "@string/btn_change_user_pass_text"
-					android:onClick = '@{() -> viewmodelmain.setFragmentLaunch("AuthUserLoggedPass")}'
+					android:onClick = '@{() -> viewmodelmain.setFragmentLaunch("AuthMailUserLoggedChangePass")}'
 					/>
 
 				<Button
