--- a/app/src/main/res/layout/c_authorization_user_mail.xml
+++ b/app/src/main/res/layout/c_authorization_user_mail.xml
@@ -75,7 +75,7 @@
 			style = "@style/text_color_and_size"
 			android:inputType = "textEmailAddress"
 			android:hint = "@string/mail_1"
-			android:text = "@={viewmodelauth.authUser}"
+			android:text = "@={viewmodelauth.authMail}"
 			app:layout_constraintHorizontal_bias = "1.0"
 			/>
 
