--- a/app/src/main/res/layout/c_authorization_user_vk_logged.xml
+++ b/app/src/main/res/layout/c_authorization_user_vk_logged.xml
@@ -46,7 +46,7 @@
 			android:textStyle = "bold"
 			android:textColor = "@color/font_color"
 			android:textSize = "14sp"
-			android:text = "@string/user_auth_options_text"
+			android:text = "@string/tv_vk"
 			/>
 
 		<include
@@ -63,42 +63,16 @@
 			/>
 
 		<Button
-			android:id = "@+id/btn_change_user_pass"
+			android:id = "@+id/btn_user_vk_change_auth"
 			android:layout_width = "180dp"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
 			app:layout_constraintStart_toStartOf = "@+id/iv_background"
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "26dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/btn_change_user_pass_text"
-			android:onClick = '@{() -> viewmodelmain.setFragmentLaunch("AuthUserLoggedPass")}'
-			/>
-
-		<Button
-			android:id = "@+id/btn_change_user_mail"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_pass"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
-			android:text = "@string/btn_change_user_mail_text"
-			android:onClick = '@{() -> viewmodelmain.setFragmentLaunch("AuthUserLoggedMail")}'
-			/>
-
-		<Button
-			android:id = "@+id/btn_change_user_auth"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_change_user_mail"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_badge"
 			android:text = "@string/btn_change_user_auth_text"
-			android:onClick = "@{() -> viewmodelauth.onAuthUserChangeClick()}"
+			android:onClick = "@{() -> viewmodelauth.onAuthVKChangeClick()}"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
