--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -157,6 +157,8 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = "@{safeUnbox(viewmodelauth.isBtnDiscordNotClickable()) ? false : true}"
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("discord") ? "AuthDiscordUserLogged" : "AuthDiscordUser")}'
 			/>
 
 		<ImageButton
