--- a/app/src/main/res/layout/auth_dialog_instagram.xml
+++ b/app/src/main/res/layout/auth_dialog_instagram.xml
@@ -7,7 +7,7 @@
 	>
 
 	<WebView
-		android:id = "@+id/webView"
+		android:id = "@+id/web_view_instagram"
 		android:layout_width = "match_parent"
 		android:layout_height = "500dp"
 		android:layout_gravity = "center_vertical"
