--- a/app/src/main/res/layout/c_authorization_user_discord.xml
+++ b/app/src/main/res/layout/c_authorization_user_discord.xml
@@ -63,7 +63,7 @@
 			/>
 
 		<Button
-			android:id = "@+id/btn_user_vk_auth"
+			android:id = "@+id/btn_user_discord_auth"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
@@ -72,7 +72,9 @@
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/btn_user_vk_auth_text"
-			android:onClick = "@{() -> viewmodelauth.onAuthDiscordClick()}"
+
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
+
+	<!--android:onClick = "@{() -> viewmodelauth.onAuthDiscordClick()}"-->
