--- a/app/src/main/res/layout/c_authorization_user_vk.xml
+++ b/app/src/main/res/layout/c_authorization_user_vk.xml
@@ -72,7 +72,7 @@
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/btn_user_vk_auth_text"
-			android:onClick = "@{() -> viewmodelauth.onAuthVKClick()}"
+			android:onClick = "@{() -> viewmodelauth.setVkAuthStart(true)}"
 			/>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
