--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+
+
     <external-path name="external_files" path="." />
+
 </paths>
+<!--<external-path-->
+<!--name="photo"-->
+<!--path="Android/data/ru.jobni.jobni/files/Photo" />-->
+
