--- a/app/src/main/res/layout/c_registration_01_other.xml
+++ b/app/src/main/res/layout/c_registration_01_other.xml
@@ -52,7 +52,6 @@
                  app:layout_constraintStart_toStartOf="@+id/background"
                  app:layout_constraintEnd_toEndOf="@+id/background"
                  android:layout_marginTop="16dp"
-                 app:viewmodelreg="@{viewmodelreg}"
                  app:viewmodelmain="@{viewmodelmain}"
                     />
         <Button android:id="@+id/bind_account"
@@ -64,6 +63,6 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/shape_button"
                 android:text="@string/bind_account"
-                android:onClick="@{() -> viewmodelreg.getVKReg()}"/>
+                android:onClick="@{() -> viewmodelreg.setSocialRegStart(true)}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
