--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -34,7 +34,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_user"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mail")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnMailNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("mail")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("mail") ? "AuthMailUserLogged" : "AuthMailUser")}'
 			/>
 
@@ -48,7 +48,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_phone"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("phone")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnPhoneNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("phone")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("phone") ? "AuthPhoneUserLogged" : "AuthPhoneUser")}'
 		/>
 
@@ -62,7 +62,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnVKNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("vk") ? "AuthVKUserLogged" : "AuthVKUser")}'
 			/>
 
@@ -75,7 +75,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("ok")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnOKNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("ok")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("ok") ? "AuthOKUserLogged" : "AuthOKUser")}'
 			/>
 
@@ -89,7 +89,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnInstagramNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("inst") ? "AuthInstagramUserLogged" : "AuthInstagramUser")}'
 			/>
 
@@ -115,7 +115,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnGoogleNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("google") ? "AuthGoogleUserLogged" : "AuthGoogleUser")}'
 			/>
 
@@ -129,7 +129,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_facebook"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("fb")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnFBNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("fb")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("fb") ? "AuthFBUserLogged" : "AuthFBUser")}'
 			/>
 
@@ -157,7 +157,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnDiscordNotClickable()) ? false : true}"
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? true : false}'
 			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("discord") ? "AuthDiscordUserLogged" : "AuthDiscordUser")}'
 			/>
 
