--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -103,6 +103,8 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("tel")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("tel")) ? true : false}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("tel") ? "AuthTelegramUserLogged" : "AuthTelegramUser")}'
 			/>
 
 		<ImageButton
