--- a/app/src/main/res/layout/c_authorization_user_ok.xml
+++ b/app/src/main/res/layout/c_authorization_user_ok.xml
@@ -64,26 +64,14 @@
 
 		<Button
 			android:id = "@+id/btn_ok_login"
-			android:layout_width = "180dp"
+			android:layout_width = "230dp"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
 			app:layout_constraintStart_toStartOf = "@+id/iv_background"
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
-			android:text = "LOGIN"
-			/>
-
-		<Button
-			android:id = "@+id/btn_ok_logout"
-			android:layout_width = "180dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/btn_ok_login"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "LOGOUT"
+			android:text = "@string/nav_header_btn_auth_text"
 			/>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
