--- a/app/src/main/res/layout/c_authorization_user_vk_logged.xml
+++ b/app/src/main/res/layout/c_authorization_user_vk_logged.xml
@@ -72,7 +72,7 @@
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/btn_change_user_auth_text"
-			android:onClick = "@{() -> viewmodelauth.onAuthVKChangeClick()}"
+			android:onClick = "@{() -> viewmodelauth.onAuthUserChangeClick()}"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
