Удаление всех сдк из проекта кроме телеграм

--- a/app/src/main/res/layout/c_authorization_user_vk_logged.xml
+++ b/app/src/main/res/layout/c_authorization_user_vk_logged.xml
@@ -46,7 +46,7 @@
 			android:textStyle = "bold"
 			android:textColor = "@color/font_color"
 			android:textSize = "14sp"
-			android:text = "@string/tv_vk"
+			android:text = "@string/user_auth_options_text"
 			/>
 
 		<include
