--- a/app/src/main/res/layout/c_registration_01_mail.xml
+++ b/app/src/main/res/layout/c_registration_01_mail.xml
@@ -105,7 +105,7 @@
 			android:inputType = "textPassword"
 			android:hint = "@string/password_1"
 			android:text = "@={viewmodelreg.regPassword}"
-			android:visibility="@{viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE}"
+			android:visibility="@{safeUnbox(viewmodelreg.resultReg2Success) ? View.GONE : View.VISIBLE}"
 			/>
 
 		<EditText
@@ -120,7 +120,7 @@
 		android:inputType = "textPassword"
 		android:hint = "@string/password_4"
 		android:text = "@={viewmodelreg.regPassConfirm}"
-		android:visibility="@{viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE}"
+		android:visibility="@{safeUnbox(viewmodelreg.resultReg2Success) ? View.GONE : View.VISIBLE}"
 		/>
 
 		<Button
