--- a/app/src/main/res/layout/c_registration_01_phone.xml
+++ b/app/src/main/res/layout/c_registration_01_phone.xml
@@ -1,67 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+>
 
-	<data>
+    <data>
 
-		<variable
-			name = "viewmodelreg"
-			type = "ru.jobni.jobni.viewmodel.RegViewModel"
-			/>
-
-		<variable
-			name = "viewmodelmain"
-			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+        <variable
+                name="viewmodelreg"
+                type="ru.jobni.jobni.viewmodel.RegViewModel"
         />
-	<import type="android.view.View" />
+
+        <variable
+                name="viewmodelmain"
+                type="ru.jobni.jobni.viewmodel.MainViewModel"
+        />
+        <import type="android.view.View"/>
     </data>
 
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
 
-		<ImageView
-			android:id = "@+id/background"
-			android:layout_width = "match_parent"
-			android:layout_height = "0dp"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintEnd_toEndOf = "parent"
-			android:layout_margin = "16dp"
-			android:background = "@drawable/shape_card"
-			/>
+        <ImageView
+                android:id="@+id/background"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="16dp"
+                android:background="@drawable/shape_card"
+        />
 
-		<EditText
-			android:id = "@+id/referral_link"
-			android:layout_width = "0dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toTopOf = "@id/background"
-			app:layout_constraintStart_toStartOf = "@id/background"
-			app:layout_constraintEnd_toEndOf = "@id/background"
-			android:layout_marginTop = "16dp"
-			android:layout_margin = "16dp"
-			style = "@style/text_color_and_size"
-			android:inputType = "text"
-			android:hint = "@string/referral_link"
-			android:text = "@={viewmodelreg.regReferer}"
-			/>
+        <EditText
+                android:id="@+id/referral_link"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/background"
+                app:layout_constraintStart_toStartOf="@id/background"
+                app:layout_constraintEnd_toEndOf="@id/background"
+                android:layout_marginTop="16dp"
+                android:layout_margin="16dp"
+                style="@style/text_color_and_size"
+                android:inputType="text"
+                android:hint="@string/referral_link"
+                android:text="@={viewmodelreg.regReferer}"
+        />
 
-		<TextView
-			android:id = "@+id/referral_message"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/referral_link"
-			app:layout_constraintStart_toStartOf = "@+id/referral_link"
-			app:layout_constraintEnd_toEndOf = "@+id/referral_link"
-			android:layout_marginTop = "16dp"
-			android:textColor = "@color/online"
-			android:textSize = "18sp"
-			android:text = "@string/referral_message"
-			/>
+        <TextView
+                android:id="@+id/referral_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/referral_link"
+                app:layout_constraintStart_toStartOf="@+id/referral_link"
+                app:layout_constraintEnd_toEndOf="@+id/referral_link"
+                android:layout_marginTop="16dp"
+                android:textColor="@color/online"
+                android:textSize="18sp"
+                android:text="@string/referral_message"
+        />
         <include android:id="@+id/include_social_network"
                  layout="@layout/c_social_network_reg"
                  android:layout_width="wrap_content"
@@ -70,65 +70,68 @@
                  app:layout_constraintStart_toStartOf="@+id/background"
                  app:layout_constraintEnd_toEndOf="@+id/background"
                  android:layout_marginTop="16dp"
-			app:viewmodelmain = "@{viewmodelmain}"
-			/>
+                 app:viewmodelmain="@{viewmodelmain}"
+        />
 
-		<EditText
-			android:id = "@+id/phone"
-			android:layout_width = "0dp"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-			app:layout_constraintStart_toStartOf = "@+id/background"
-			app:layout_constraintEnd_toEndOf = "@+id/background"
-			android:layout_marginTop = "16dp"
-			android:layout_margin = "16dp"
-			style = "@style/text_color_and_size"
-			android:inputType = "phone"
-			android:hint = "@string/phone"
-			android:text = "@={viewmodelreg.regPhone}"
-			/>
+        <EditText
+                android:id="@+id/phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/include_social_network"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginTop="16dp"
+                android:layout_margin="16dp"
+                style="@style/text_color_and_size"
+                android:inputType="phone"
+                android:hint="@string/phone"
+                android:text="@={viewmodelreg.regPhone}"
+                android:visibility='@{safeUnbox(viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE)}'
+        />
 
-		<EditText
-                android:id = "@+id/password_phone"
-                android:layout_width = "0dp"
-                android:layout_height = "wrap_content"
-                app:layout_constraintTop_toBottomOf = "@+id/phone"
-                app:layout_constraintStart_toStartOf = "@+id/phone"
-                app:layout_constraintEnd_toEndOf = "@+id/phone"
-                android:layout_marginTop = "16dp"
-                style = "@style/text_color_and_size"
-                android:inputType = "textPassword"
-                android:hint = "@string/password_1"
-                android:text = "@={viewmodelreg.regPassword}"
+        <EditText
+                android:id="@+id/password_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/phone"
+                app:layout_constraintStart_toStartOf="@+id/phone"
+                app:layout_constraintEnd_toEndOf="@+id/phone"
+                android:layout_marginTop="16dp"
+                style="@style/text_color_and_size"
+                android:inputType="textPassword"
+                android:hint="@string/password_1"
+                android:text="@={viewmodelreg.regPassword}"
                 android:visibility="@{safeUnbox(viewmodelreg.resultReg2Success) ? View.GONE : View.VISIBLE}"
         />
 
         <EditText
-                android:id = "@+id/password_confirm_phone"
-                android:layout_width = "0dp"
-                android:layout_height = "wrap_content"
-                app:layout_constraintTop_toBottomOf = "@+id/password_phone"
-                app:layout_constraintStart_toStartOf = "@+id/phone"
-                app:layout_constraintEnd_toEndOf = "@+id/phone"
-                android:layout_marginTop = "16dp"
-                style = "@style/text_color_and_size"
-                android:inputType = "textPassword"
-                android:hint = "@string/password_4"
-                android:text = "@={viewmodelreg.regPassConfirm}"
+                android:id="@+id/password_confirm_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/password_phone"
+                app:layout_constraintStart_toStartOf="@+id/phone"
+                app:layout_constraintEnd_toEndOf="@+id/phone"
+                android:layout_marginTop="16dp"
+                style="@style/text_color_and_size"
+                android:inputType="textPassword"
+                android:hint="@string/password_4"
+                android:text="@={viewmodelreg.regPassConfirm}"
                 android:visibility="@{safeUnbox(viewmodelreg.resultReg2Success) ? View.GONE : View.VISIBLE}"
         />
 
-		<Button
-			android:id = "@+id/phone_code_send"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/password_confirm_phone"
-			app:layout_constraintStart_toStartOf = "@+id/background"
-			app:layout_constraintEnd_toEndOf = "@+id/background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/code_send"
-            android:onClick = '@{() -> viewmodelreg.regOrBind("phone")}'/>
+        <Button
+                android:id="@+id/phone_code_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/password_confirm_phone"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_button"
+                android:text="@string/code_send"
+                android:onClick='@{() -> viewmodelreg.regOrBind("phone")}'
+                android:visibility='@{safeUnbox(viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE)}'
+        />
         <EditText android:id="@+id/phone_code"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
@@ -140,19 +143,21 @@
                   android:inputType="numberPassword"
                   android:hint="@string/phone_code"
                   android:text="@={viewmodelreg.regPhoneCode}"
-			/>
+                  android:visibility='@{safeUnbox(viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE)}'
+        />
 
-		<Button
-			android:id = "@+id/btn_send_mail_code"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf="@+id/phone_code"
-                app:layout_constraintStart_toStartOf = "@+id/background"
-			app:layout_constraintEnd_toEndOf = "@+id/background"
-			android:layout_marginTop = "16dp"
-			android:background = "@drawable/shape_button"
-			android:text = "@string/bind_account"
-                android:onClick = "@{() -> viewmodelreg.confirmPhone()}"
-			/>
-	</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+                android:id="@+id/btn_send_mail_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/phone_code"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_button"
+                android:text="@string/bind_account"
+                android:onClick="@{() -> viewmodelreg.confirmPhone()}"
+                android:visibility='@{safeUnbox(viewmodelreg.resultReg2Success? View.GONE : View.VISIBLE)}'
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
