registration ready fix 1(clickable reg phase)

--- a/app/src/main/res/layout/reg_phase_recycler_item.xml
+++ b/app/src/main/res/layout/reg_phase_recycler_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+		xmlns:android = "http://schemas.android.com/apk/res/android"
+		xmlns:app = "http://schemas.android.com/apk/res-auto">
 
 	<data>
 
@@ -17,10 +19,12 @@
 	</data>
 
 	<LinearLayout
-		xmlns:android = "http://schemas.android.com/apk/res/android"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		android:orientation = "vertical"
+		app:phaseNumber="@{position}"
+		app:reg2ready="@{viewModel.resultReg2Success}"
+		app:reg3ready="@{viewModel.resultReg3Success}"
 		>
 
 		<TextView
