--- a/app/src/main/res/layout/c_registration_01_mail.xml
+++ b/app/src/main/res/layout/c_registration_01_mail.xml
@@ -67,16 +67,16 @@
 			/>
 
 		<include
-			android:id = "@+id/include_social_network"
-			layout = "@layout/c_social_network_reg"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/referral_message"
-			app:layout_constraintStart_toStartOf = "@+id/background"
-			app:layout_constraintEnd_toEndOf = "@+id/background"
-			android:layout_marginTop = "16dp"
-			app:viewmodelmain = "@{viewmodelmain}"
-			/>
+				android:id="@+id/include_social_network"
+				layout="@layout/c_social_network_reg"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				app:layout_constraintTop_toBottomOf="@+id/referral_message"
+				app:layout_constraintStart_toStartOf="@+id/background"
+				app:layout_constraintEnd_toEndOf="@+id/background"
+				android:layout_marginTop="16dp"
+				app:viewmodelmain="@{viewmodelmain}"
+				app:layout_constraintBottom_toTopOf="@+id/mail"/>
 
 		<EditText
 			android:id = "@+id/mail"
